--- a/APM-Start/src/app/products/product-list.component.html
+++ b/APM-Start/src/app/products/product-list.component.html
@@ -8,8 +8,13 @@
         <div class='row'>
             <div class='col-md-2'>Filter by:</div>
             <div class='col-md-4'>
+                <!-- 2 way binding short version-->
                 <input type='text'
                        [(ngModel)]='listFilter' />
+                <!-- one way binding with even listener -->
+                <!-- <input type='text'
+                       [ngModel]='listFilter' 
+                       (ngModelChange)='onFilterChange($event)'/> -->
             </div>
         </div>
         <div class='row' [hidden]='!listFilter'>
